# server/app/Swagger/AuthResponses.php
@@ -7,5 +7,10 @@ namespace App\Swagger;
  *     response="UserLoginSuccess",
  *     description="ログインに成功しました",
  * )
+ * 
+ * @OA\Response(
+ *     response="UserLogoutSuccess",
+ *     description="ログアウトに成功しました",
+ * )
  */
 class AuthResponses {}
